fixed css overflow

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     background: linear-gradient(to top, #d8dbd6 15% 82%, #009688 18%);
 }
 
-.structure-row {
+.height-row {
   height: 550px;
   padding-top: 5%;
 }
